added ability for vendors to add products from the vendorapi
