# VendorAPI/src/product/controller.ts
@@ -8,7 +8,8 @@ import {
 } from 'tsoa';
   
 
-import { Product } from '.';
+import { Product, ProductAdd } from '.';
+import { ProductService } from './service';
 //import { AccountService } from './service';
   
 @Route('products')
@@ -18,16 +19,18 @@ export class AccountController extends Controller {
   @Response('401', 'Unauthorized')
   public async postProduct(
       // eslint-disable-next-line @typescript-eslint/no-unused-vars
-      @Body() product: Product,
+      @Body() productInfo: ProductAdd,
   ): Promise<Product|undefined> {
-    return {
-      id: "123e4567-e89b-12d3-a456-426655440000",
-      name: "string",
-      description: "string",
-      price: 1234,
-      rating: 1234,
-      image: "string"
-    }
+        console.log("heere")
+        return await new ProductService().addProduct(productInfo)
+    // return {
+    //   id: "123e4567-e89b-12d3-a456-426655440000",
+    //   name: "string",
+    //   description: "string",
+    //   price: 1234,
+    //   rating: 1234,
+    //   image: "string"
+    // }
   }
 }
   
